kubernetes/apps/monitoring/cameras/entrance-camera/app/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: entrance-camera
subsets:
- addresses:
  - ip: ${CAMERA_0_IP}
  ports:
  - name: entrance-camera
    port: 80
    protocol: TCP
