kubernetes/apps/monitoring/cameras/entrance-camera/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: entrance-camera
spec:
  ports:
  - name: entrance-camera
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
